# Pixie-Cat

./: .gitignore  LICENSE  MANIFEST.in  Pixie.spec  README.md  behavior_manager.py  cat.py  pointer.py  pyproject.toml  rthook_gi_paths.py  run_pixie.py  sprite.py  walk.py
behaviors/: attack.py  base.py  happy.py  idle.py  run.py  sit.py  walk.py
pixie/: __main__.py  app.py  behavior_manager.py  pointer.py  positioner.py  sprite.py  tray.py  walk.py
pixie/behaviors/: attack.py  base.py  happy.py  idle.py  run.py  sit.py  walk.py
