[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pixie-cat"
version = "0.1.0"
description = "A little desktop cat that runs around your screen."
readme = "README.md"
authors = [{ name = "Reynard" }]
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["gtk", "wayland", "cat", "desktop", "pet"]

[project.urls]
Home = "https://github.com/moeinEN/Pixie-Cat"

[project.scripts]
pixie = "pixie.__main__:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
pixie = ["assets/*"]

[tool.setuptools.packages.find]
where = ["."]